# schelling1971

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
analysis/: reproduce_paper.py  requirements.txt  visualize.py  visualize_sweep.py
simulation/: Cargo.toml
simulation/src/: grid.rs  main.rs  metrics.rs
simulation/src/analytic/: dynamics.rs  mod.rs  phase.rs  preset.rs  reaction.rs  runner.rs  tipping.rs  tolerance.rs
src/: config.rs  grid.rs  main.rs  simulation.rs
tools/: pyproject.toml
tools/src/schelling_tools/: cli.py  reproduce_paper.py  show_experiment_settings.py  visualize.py  visualize_bnm.py  visualize_sweep.py  visualize_tipping.py
