[package]
name = "schelling-segregation"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "schelling"
path = "src/main.rs"

[dependencies]
rand        = { version = "0.8", features = ["small_rng"] }
rand_chacha = "0.3"
csv         = "1.3"
serde       = { version = "1.0", features = ["derive"] }
clap        = { version = "4.5", features = ["derive"] }
