[project]
name = "schelling-tools"
version = "0.1.0"
description = "Schelling (1971) segregation model — visualization & analysis tools"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "Pillow>=10.0",
]

[project.scripts]
schelling-tools = "schelling_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/schelling_tools"]
